# toolsLWA4

./: .gitignore  CMakeLists.txt
cmake/Modules/: Findreflex.cmake
control/: CMakeLists.txt
control/cmake/Modules/: Findamino.cmake  Findsns.cmake
control/scripts/: crichton_arms.sh  crichton_hands.sh  crichton_utils.sh
control/tests/: CMakeLists.txt  moveArmBasic.cpp  moveFingers.cpp  readHandStates.cpp
crichtonSim/: CMakeLists.txt  crichtonSim.cpp  crichtonSim.h
crichtonSim/tests/: moveArm.cpp
data/example_SQ_1/segmented/: crichton_base.pcd  crichton_base_2.pcd  data.txt  drill.pcd  regadera.pcd  regadera_2.pcd  vaso.pcd  wheelPivot.pcd
data/example_SQ_2/: cluster_0.pcd  cluster_1.pcd  cluster_2.pcd  cluster_3.pcd  cluster_4.pcd  cluster_5.pcd  cluster_6.pcd  cluster_7.pcd  downsampledFilteredCloud.pcd  table_inliers.pcd  table_projected.pcd
data/subject/: dummyElbow.urdf  dummyHand.urdf  dummyHead.urdf  dummyHuman_world.urdf  dummyShoulder.urdf
getKinectTran/: CMakeLists.txt  getKinectTran.cpp  icpComparison.cpp  jac_Eq.txt  minimizer_eqs.cpp  moveEE_automatic.cpp  moveEE_predef.cpp  testCalib.cpp  testICP.cpp  testRANSAC.cpp
getKinectTran/data/: data.cpp  leftArm_traj2.txt  testICP3.cpp  transformations.txt
graspViz/: CMakeLists.txt  graspViz.cpp  graspViz.h  graspVizApp.cpp
handover_physical/: CMakeLists.txt  marker_filter.cpp
handover_physical/scripts/: handover
perceptionSystem/: CMakeLists.txt  README.md  perceptionSystem.cpp  segmentedCloudTestReceiver.cpp
perceptionSystem/getKinectTran/: CMakeLists.txt  getKinectTran.cpp  moveEE_automatic.cpp  pickObject.cpp  testMethods.cpp
perceptionSystem/getKinectTran/data/: leftArm_traj1.txt  leftArm_traj3.txt
piranha0/: CMakeLists.txt
piranha0/include/: piranha0.h
piranha0/src/: piranha0.cpp
piranha0/ui/: piranha0Tab.ui
piranha_control_ui/: CMakeLists.txt
piranha_control_ui/include/: piranha_control_ui.h
piranha_control_ui/src/: piranha_control_ui.cpp
piranha_control_ui/ui/: piranha_control_ui.ui
piranha_viz_ui/: CMakeLists.txt
piranha_viz_ui/include/: piranha_viz_ui.h
piranha_viz_ui/src/: piranha_viz_ui.cpp
piranha_viz_ui/ui/: piranha_viz_ui.ui
piranhinha/: CMakeLists.txt
piranhinha/piranha_control/: CMakeLists.txt  pir_lisp.cpp  pir_lisp.h  piranha_control.cpp  piranha_control.h  piranha_filter.cpp  piranha_filter.h  run_control.cpp  run_filter.cpp
piranhinha/scripts/: piranhinha
subjectDetection/: CMakeLists.txt
subjectDetection/data/: subjectDetectionConfig.xml
subjectDetection/include/: subjectTracking.h
subjectDetection/scripts/: subjectTracking.sh
subjectDetection/src/: subjectTracking.cpp
subjectDetection/tests/: NiSimpleSkeleton.cpp  receiveJointInfo.cpp  subjectTracking_main.cpp
subjectDetection/tests/NiUserTracker/: SceneDrawer.cpp  main.cpp
tabletop_object_perception/: CMakeLists.txt
tabletop_object_perception/discretizeSpace/: CMakeLists.txt  PCL2Octomap.cpp  PCL2Octomap.h  README.md
tabletop_object_perception/discretizeSpace/test/: storedPCD_test.cpp
tabletop_object_perception/helpers/: CMakeLists.txt  concave_hull_2d.cpp  dt_test.cpp  grabKinectData.cpp  grabPCD.cpp  showPCD.cpp  tabletop_segmentation_test.cpp  tabletop_symmetry_test.cpp  testImage.cpp
tabletop_object_perception/tabletop_object_detector/: CMakeLists.txt  tabletop_segmentation.cpp  tabletop_segmentation.h
tabletop_object_perception/tabletop_symmetry/: CMakeLists.txt  mindGapper.cpp  mindGapper.h
